# TVG

./: LICENSE  README.md  ejercicio2.mhd  requirements.txt  task1.txt  task2.txt  task3.txt  task4.txt  task7.mhd
P1/: task01_crear_imagen.py  task02_leer_y_mostrar.py  task03_info_imagen.py  task04_iterators.py  task05_average_filter.py
P1_C/: CMakeCache.txt  CMakeLists.txt  HelloWorld  Makefile  cmake_install.cmake
P2_C/ejercicio/src/: CMakeCache.txt  Makefile  cmake_install.cmake  ejercicio.cpp
P2_C/task1/src/: task1.cpp
P2_C/task2/src/: CMakeLists.txt  task2.cpp
P2_C/task3/src/: CMakeLists.txt  task3.cpp
P2_C/task4/src/: task4.cpp
P3_C/ejercicio/src/: CMakeLists.txt
P3_C/task1/src/: task1.cpp
P3_C/task2/src/: task2.cpp
P3_C/task3/src/: task3.cpp
P4_C/task1/src/: CMakeLists.txt  task1.cpp
P4_C/task2/src/: task2.cpp
P5_C/ejercicio/src/: ejercicio.cpp  ejercicio.py
P5_C/ejercicio2/src/: CMakeLists.txt  ejercicio2.py
P5_C/task1/src/: task1.cpp
P5_C/task2/src/: task2.cpp
P5_C/task3/src/: task3.py
P5_C/task4/src/: CMakeLists.txt  task4.cpp  task4.py
P5_C/task5/src/: CMakeLists.txt  task5.cpp  task5.py
P5_C/task6/src/: task6.cpp  task6.py
P5_C/task7/src/: CMakeLists.txt  task7.cpp  task7.py  task72.py
P5_C/task8/src/: CMakeLists.txt  task8.cpp  task8.py
images/: 0LEEME.txt  IMG110  IMG111  IMG112  IMG113  IMG114  IMG115  IMG116  IMG117  IMG118  IMG119  IMG120  IMG121  IMG122  IMG123  IMG124  IMG125  IMG126  IMG127  IMG128  IMG129  IMG130
